--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -438,7 +438,7 @@ export default defineConfig({
 
 为方便用户在 [docs 目录](/api/config/config-basic#root) 中使用组件，而设置的 [路由约定](../../../guide/basic/use-mdx/components.mdx)，默认排除以 `_` 开头的文件。
 
-如果你确实需要一些 `_` 开的路由时，你可以调整这个规则，例如设置为以 `_fragment-` 开头才会被排除：
+如果你确实需要一些 `_` 开头的路由时，你可以调整这个规则，例如设置为以 `_fragment-` 开头才会被排除：
 
 ```js title="rspress.config.ts"
 import { defineConfig } from '@rspress/core';
