--- a/packages/document/docs/en/guide/basic/use-mdx/components.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx/components.mdx
@@ -1,4 +1,4 @@
-# MDX and React Components
+# MDX and React components
 
 ## Componentization
 
@@ -56,7 +56,7 @@ Testing the use of MDX fragments and React components.
 
 You can use [built-in components](/guide/default-theme/components) provided by Rspress or install some React component libraries to enrich your documentation in `.mdx` files.
 
-## Routing Convention
+## Routing convention
 
 In the [docs directory](/api/config/config-basic#root), MDX fragments or React components need to be excluded from routing through the [route.exclude](/api/config/config-basic#routeexclude) configuration. For convenience, we agree that files starting with "\_" will be excluded by default.
 
@@ -100,7 +100,7 @@ import Button from './_button.mdx';
 
 </Border>
 
-## Escape Hatch: Using MDX Styles in TSX Components
+## Escape Hatch: using MDX styles in TSX components
 
 ```tsx file="./_escape-hatch.tsx" title="_escape-hatch.tsx"
 
