--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-algolia
+# @rspress/plugin-algolia <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-algolia" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-algolia" />
 
 基于 [docsearch](https://docsearch.algolia.com)，将 Rspress 内置的搜索功能替换为 [algolia](https://www.algolia.com/)。
 
