--- a/packages/document/docs/zh/plugin/official-plugins/client-redirects.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/client-redirects.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-client-redirects
+# @rspress/plugin-client-redirects <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-client-redirects" />
 
 import { SourceCode, PackageManagerTabs } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-client-redirects" />
 
 用于客户端重定向。
 
