--- a/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-last-updated
-
 import { SourceCode, PackageManagerTabs } from '@rspress/core/theme';
 
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-last-updated" />
+# @rspress/plugin-last-updated <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-last-updated" />
 
 ## 介绍
 
