--- a/packages/document/docs/zh/plugin/official-plugins/medium-zoom.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/medium-zoom.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-medium-zoom
+# @rspress/plugin-medium-zoom <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-medium-zoom" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-medium-zoom" />
 
 默认内置插件，用于支持图片放大。
 
