--- a/packages/document/docs/zh/plugin/official-plugins/shiki.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/shiki.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-shiki
+# @rspress/plugin-shiki <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-shiki" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-shiki" />
 
 集成 [Shiki](https://github.com/shikijs/shiki) 代码高亮插件。在默认情况下，Rspress 会基于 [Prism.js](https://prismjs.com/) 来实现语法高亮。不过在某些情况下，你需要实现更多语言的代码高亮，Prism.js 可能不够用，此时你可以接入该插件，使用 Shiki 支持更多的语言。
 
