--- a/packages/document/docs/zh/plugin/official-plugins/sitemap.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/sitemap.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-sitemap
+# @rspress/plugin-sitemap <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-sitemap" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-sitemap" />
 
 自动生成用于 SEO 的 [站点地图 (sitemap)](https://developers.google.com/search/docs/crawling-indexing/sitemaps/overview)，有利于搜索引擎抓取。
 
