--- a/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-api-docgen
+# @rspress/plugin-api-docgen <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-api-docgen" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-api-docgen" />
 
 用于自动生成 API 文档描述，支持 [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) 和 [documentation](https://github.com/documentationjs/documentation)。
 
