--- a/packages/document/docs/zh/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/typedoc.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-typedoc
+# @rspress/plugin-typedoc <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc" />
 
 import { SourceCode, PackageManagerTabs } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc" />
 
 集成 [TypeDoc](https://github.com/TypeStrong/typedoc) 的 Rspress 插件，用于自动生成 TS 模块的 API 文档。
 
