--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-algolia
+# @rspress/plugin-algolia <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-algolia" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-algolia" />
 
 Based on [docsearch](https://docsearch.algolia.com), this plugin replaces Rspress's built-in search with [algolia](https://www.algolia.com/).
 
