--- a/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-api-docgen
+# @rspress/plugin-api-docgen <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-api-docgen" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-api-docgen" />
 
 The plugin is used to generate api document description automatically, powered by [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) and [documentation](https://github.com/documentationjs/documentation).
 
