--- a/packages/document/docs/en/plugin/official-plugins/rss.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/rss.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-rss
+# @rspress/plugin-rss <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-rss" />
 
 import { SourceCode, PackageManagerTabs } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-rss" />
 
 Generates RSS files for specific document pages with [feed](https://github.com/jpmonette/feed).
 
