--- a/packages/document/docs/en/plugin/official-plugins/shiki.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/shiki.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-shiki
+# @rspress/plugin-shiki <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-shiki" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-shiki" />
 
 Integrated [Shiki](https://github.com/shikijs/shiki) code highlighting plugin. By default, Rspress uses [Prism.js](https://prismjs.com/) to achieve syntax highlighting. However, in some cases, when you need to implement code highlighting for more languages, Prism.js may not be sufficient, so you can integrate this plugin to use Shiki to support more languages.
 
