--- a/packages/document/docs/en/plugin/official-plugins/sitemap.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/sitemap.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-sitemap
+# @rspress/plugin-sitemap <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-sitemap" />
 
 import { SourceCode } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-sitemap" />
 
 Automatically generate [sitemap](https://developers.google.com/search/docs/crawling-indexing/sitemaps/overview) for SEO, which helps search engines crawl your site.
 
