--- a/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
@@ -1,8 +1,6 @@
-# @rspress/plugin-typedoc
+# @rspress/plugin-typedoc <SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc" />
 
 import { SourceCode, PackageManagerTabs } from '@rspress/core/theme';
-
-<SourceCode href="https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc" />
 
 Integration of [TypeDoc](https://github.com/TypeStrong/typedoc)'s Rspress Plugin for Automatically Generating API Documentation for TS Modules.
 
