chore: lint fix

--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -66,10 +66,8 @@ export * from '@rspress/core/theme';
 
 Add a copy button to specific pages, example:
 
-```mdx
-# Hello World
-
-{/* [!code highlight:4] */}
+```mdx title="docs/hello-world.mdx"
+# Hello world
 
 <LlmsContainer>
   <LlmsCopyButton />
@@ -241,7 +239,7 @@ pluginLlms({
 });
 ```
 
-## UI Component Options
+## UI component props
 
 ### LlmsCopyButtonProps
 
