--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -65,10 +65,8 @@ export * from '@rspress/core/theme';
 
 为指定页面增加复制按钮，示例：
 
-```mdx
-# Hello World
-
-{/* [!code highlight:4] */}
+```mdx title="docs/hello-world.mdx"
+# Hello world
 
 <LlmsContainer>
   <LlmsCopyButton />
