--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -298,7 +298,7 @@ interface LlmsViewOptionsProps
 }
 ```
 
-### options
+#### options
 
 - **Type**: `Array<{ title: string; href: string; icon: React.ReactNode } | 'claude' | 'chatgpt'>`
 - **Default**: `['chatgpt', 'claude']`
