--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -297,7 +297,7 @@ interface LlmsViewOptionsProps
 }
 ```
 
-### options
+#### options
 
 - **类型**：`Array<{ title: string; href: string; icon: React.ReactNode } | 'claude' | 'chatgpt'>`
 - **默认值**：`['chatgpt', 'claude']`
