fix(plugin-llms)!: default value change mdxToMd: false

--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -187,9 +187,9 @@ Whether to generate a markdown file for the corresponding route, when set to `fa
 #### mdxToMd
 
 - Type: `boolean`
-- Default: `true`
+- Default: `false`
 
-Whether to convert mdx files to md files, by default, mdx files will be converted to md files through a set of default strategies.
+Whether to convert mdx content to md content. If enabled, mdx files will be converted to md files through a set of default strategies, but there may be some information loss.
 
 ### llmsFullTxt
 
