--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -186,9 +186,9 @@ export interface MdFiles {
 #### mdxToMd
 
 - 类型: `boolean`
-- 默认值: `true`
+- 默认值: `false`
 
-是否将 mdx 文件转换为 md 文件，默认会将 mdx 文件通过一组默认策略转换为 md 文件。
+是否将 mdx 内容转换为 md 内容，如果启用，会将 mdx 文件通过一组默认策略转换为 md 文件，但可能会有一定的信息丢失。
 
 ### llmsFullTxt
 
