--- a/packages/document/docs/zh/guide/basic/use-mdx/index.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx/index.mdx
@@ -199,9 +199,10 @@ console.log('Hello World');
 **输入:**
 
 ````md
-```js {1,3-5}
-console.log('Hello World');
+```js
+console.log('Hello World'); // [\!code highlight]
 
+// [\!code highlight:3]
 const a = 1;
 console.log(a);
 const b = 2;
@@ -211,9 +212,10 @@ console.log(b);
 
 **输出:**
 
-```js {1,3-5}
-console.log('Hello World');
+```js
+console.log('Hello World'); // [!code highlight]
 
+// [!code highlight:3]
 const a = 1;
 console.log(a);
 const b = 2;
@@ -225,9 +227,10 @@ console.log(b);
 **输入:**
 
 ````md
-```js title="hello.js" {1,3-5}
-console.log('Hello World');
+```js title="hello.js"
+console.log('Hello World'); // [\!code highlight]
 
+// [\!code highlight:3]
 const a = 1;
 
 console.log(a);
@@ -240,9 +243,10 @@ console.log(b);
 
 **输出:**
 
-```js title="hello.js" {1,3-5}
-console.log('Hello World');
+```js title="hello.js"
+console.log('Hello World'); // [!code highlight]
 
+// [!code highlight:3]
 const a = 1;
 
 console.log(a);
