docs(v2): add note to clarify backslash in code highlight syntax

--- a/packages/document/docs/en/guide/basic/use-mdx/index.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx/index.mdx
@@ -281,6 +281,10 @@ console.log(b);
 ```
 ````
 
+:::warning
+The backslash (`\`) in `[\!code highlight]` is for Markdown escaping to display the raw syntax. Do not include it when using this notation in your actual code.
+:::
+
 **Output:**
 
 ```js title="hello.js"
