chore: add missing code blocks

--- a/packages/document/docs/zh/guide/basic/use-mdx/index.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx/index.mdx
@@ -211,7 +211,7 @@ console.log(b);
 ````
 
 :::warning
-在 [!code highlight] 中的反斜杠（\）是为了在 Markdown 中转义以显示原始语法。在实际使用该语法时，请不要包含此反斜杠。
+在 `[\!code highlight]` 中的反斜杠（`\`）是为了在 Markdown 中转义以显示原始语法。在实际使用该语法时，请不要包含此反斜杠。
 :::
 
 **输出:**
